--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,34 @@
     <groupId>net.portagoras.mythical-java-api</groupId>
     <artifactId>mythical-java-api</artifactId>
     <version>1.0</version>
+    <packaging>jar</packaging>
+
+    <name>Mythical Java Wrapper</name>
+    <description>Implementation of the Mythical Bot List Api in Java</description>
+
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.asynchttpclient/async-http-client -->
+        <dependency>
+            <groupId>org.asynchttpclient</groupId>
+            <artifactId>async-http-client</artifactId>
+            <version>2.8.1</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20180813</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
